Fixed unnecessary white space at the bottom for tablet.

--- a/src/handlers/Contact/_style.scss
+++ b/src/handlers/Contact/_style.scss
@@ -78,6 +78,7 @@ $contact-info-padding: 12.5px;
      * A content section
      */
     & .contact__info__content { margin-bottom: ($contact-info-padding * 2); }
+    & .contact__info__content:last-child { margin-bottom: 0; }
 
     /**
      * Section heading
